--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "coreason_refinery"
-version = "0.1.1"
+version = "0.2.0"
 description = "industrial processing plant for data ingestion"
 authors = ["Gowtham A Rao <gowtham.rao@coreason.ai>"]
 license = "Prosperity-3.0"
@@ -19,6 +19,9 @@ pdf2image = "^1.17.0"
 pandas = "^2.3.3"
 openpyxl = "^3.1.5"
 tabulate = "^0.9.0"
+fastapi = "^0.128.0"
+uvicorn = "^0.40.0"
+python-multipart = "^0.0.22"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.2"
@@ -36,7 +39,7 @@ build-backend = "poetry.core.masonry.api"
 
 [project]
 name = "coreason_refinery"
-version = "0.1.1"
+version = "0.2.0"
 description = "industrial processing plant for data ingestion"
 readme = "README.md"
 requires-python = ">=3.11"
